--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,7 +518,7 @@ main {
 }
 
 /*-----------------------------------*\
-  #ABOUT
+  #ABOUT and #HOME
 \*-----------------------------------*/
 
 .about .article-title {
@@ -813,83 +813,7 @@ main {
   filter: grayscale(0);
 }
 
-/*-----------------------------------*\
-  #RESUME
-\*-----------------------------------*/
-
-.article-title {
-  margin-bottom: 30px;
-}
-
-/**
- * education and experience 
- */
-
-.timeline {
-  margin-bottom: 30px;
-}
-
-.timeline .title-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  margin-bottom: 25px;
-}
-
-.timeline-list {
-  font-size: var(--fs-6);
-  margin-left: 45px;
-}
-
-.timeline-item {
-  position: relative;
-}
-
-.timeline-item:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-.timeline-item-title {
-  font-size: var(--fs-6);
-  line-height: 1.3;
-  margin-bottom: 7px;
-}
-
-.timeline-list span {
-  color: var(--vegas-gold);
-  font-weight: var(--fw-400);
-  line-height: 1.6;
-}
-
-.timeline-item:not(:last-child)::before {
-  content: "";
-  position: absolute;
-  top: -25px;
-  left: -30px;
-  width: 1px;
-  height: calc(100% + 50px);
-  background: var(--jet);
-}
-
-.timeline-item::after {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: -33px;
-  height: 6px;
-  width: 6px;
-  background: var(--text-gradient-yellow);
-  border-radius: 50%;
-  box-shadow: 0 0 0 4px var(--jet);
-}
-
-.timeline-text {
-  color: var(--light-gray);
-  font-weight: var(--fw-300);
-  line-height: 1.6;
-}
-
-/**
+/*
  * skills 
  */
 
@@ -1225,7 +1149,6 @@ summary {
   width: 100%;
   height: 100%;
   border: none;
-  filter: grayscale(1) invert(1);
 }
 
 .contact-form {
@@ -1233,11 +1156,10 @@ summary {
 }
 
 .input-wrapper {
-  display: grid;
-  grid-template-columns: 1fr;
-  
-  gap: 25px;
-  margin-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .input-wrapper div {
   box-shadow: var(--shadow-3);
@@ -1246,6 +1168,10 @@ summary {
 .input-wrapper h1 {
   color: white;
   padding: 30px;
+}
+.input-wrapper p button {
+  padding-left: 200px;
+  color: gold;
 }
 
 .form-input {
@@ -1273,6 +1199,13 @@ textarea.form-input {
   resize: vertical;
   margin-bottom: 25px;
 }
+.form {
+  width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
 
 textarea.form-input::-webkit-resizer {
   display: none;
@@ -1298,7 +1231,7 @@ textarea.form-input::-webkit-resizer {
   box-shadow: var(--shadow-3);
   z-index: 1;
   transition: var(--transition-1);
-  margin-right: 150px;
+  margin-right: 400px;
 }
 
 .form-btn::before {
@@ -1335,9 +1268,9 @@ textarea.form-input::-webkit-resizer {
 .form-btn:disabled:hover::before {
   background: var(--bg-gradient-jet);
 }
-.form-btn a{
+.form-btn a {
   color: var(--orange-yellow-crayola);
-   font-size: var(--fs-6);
+  font-size: var(--fs-6);
   text-transform: capitalize;
 }
 
@@ -1626,21 +1559,6 @@ textarea.form-input::-webkit-resizer {
   /**
    * #RESUME
    */
-
-  .timeline-list {
-    margin-left: 65px;
-  }
-
-  .timeline-item:not(:last-child)::before {
-    left: -40px;
-  }
-
-  .timeline-item::after {
-    height: 8px;
-    width: 8px;
-    left: -43px;
-  }
-
   .skills-item:not(:last-child) {
     margin-bottom: 25px;
   }
@@ -1793,7 +1711,6 @@ textarea.form-input::-webkit-resizer {
   .input-wrapper {
     grid-template-columns: 1fr 1fr;
     display: grid;
-    
   }
   .input-wrapper input {
     padding: 20px;
